--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,4 @@ remote_theme: pages-themes/dinky@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Mystanic
-
-theme: pages-themes/dinky@v0.2.0
+title: false
